# serializer version: 1
# name: test_work_item_list_row_list[ag]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Malone-Arias',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'b4ed30be-cd3b-46d6-adff-c6ae56097f56',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'b4ed30be-cd3b-46d6-adff-c6ae56097f56',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Malone-Arias',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'these-start-scene',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '0f44d1f2-775d-4618-a8ad-a6dad9b5a388',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': '0f44d1f2-775d-4618-a8ad-a6dad9b5a388',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Malone-Arias',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '4998d52c-1678-4fe8-8c49-e983d75d50e0',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': '4998d52c-1678-4fe8-8c49-e983d75d50e0',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'ff92bded-f387-4695-a9f2-3f9e2a40f993',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Ing. Jennifer Käster MBA.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': '2025-01-01',
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'ff92bded-f387-4695-a9f2-3f9e2a40f993',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Malone-Arias',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'c5b3a4c5-09c2-473a-859b-fc68db651f90',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': 'c5b3a4c5-09c2-473a-859b-fc68db651f90',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[be]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/2c626500-fa47-4cc1-9ec6-23a31da54290',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '2c626500-fa47-4cc1-9ec6-23a31da54290',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/step-lay-its-now',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/d1ceed20-8f5a-47cb-bee8-c28190d6f755',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'd1ceed20-8f5a-47cb-bee8-c28190d6f755',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/cf6c9342-1e4d-4ae9-a97a-d3c05aa27cfd',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'cf6c9342-1e4d-4ae9-a97a-d3c05aa27cfd',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/90adfadf-a680-4b56-985d-a251f1e60580',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Brian Hörle',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '90adfadf-a680-4b56-985d-a251f1e60580',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/ffa7f6a7-eff2-4672-8f2d-cb716a720f8c',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'ffa7f6a7-eff2-4672-8f2d-cb716a720f8c',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[gr]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '2e367375-2309-45b6-a2eb-7ae17a1facae',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '2e367375-2309-45b6-a2eb-7ae17a1facae',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'interest-after-half',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '5682b500-5c6d-407c-a269-90a1dca3eff2',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': '5682b500-5c6d-407c-a269-90a1dca3eff2',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '54c856bf-f8eb-4695-a52e-71d158eb11dc',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': '54c856bf-f8eb-4695-a52e-71d158eb11dc',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Willibald Rudolph',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': '2025-01-01',
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '8003224e-96de-44da-99d9-a4a293af58e6',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': '8003224e-96de-44da-99d9-a4a293af58e6',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[sg]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Neues EFH',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'bd457d3b-2fc8-4ae0-8fcf-26c1baae1d71',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2026-99',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'bd457d3b-2fc8-4ae0-8fcf-26c1baae1d71',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
              dict({
                'id': '<INSTANCE_MARK_ID>',
                'type': 'instance-marks',
              }),
            ]),
            'meta': dict({
              'count': 1,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Neues EFH',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'mrs-fight-whether',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '2397ee74-7cca-4fdb-b4a9-690d9ca063e6',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2026-99',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '2397ee74-7cca-4fdb-b4a9-690d9ca063e6',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
              dict({
                'id': '<INSTANCE_MARK_ID>',
                'type': 'instance-marks',
              }),
            ]),
            'meta': dict({
              'count': 1,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Neues EFH',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'da0f7fb4-7b6e-49a0-afb2-4a39b2acea8d',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2026-99',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'da0f7fb4-7b6e-49a0-afb2-4a39b2acea8d',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
              dict({
                'id': '<INSTANCE_MARK_ID>',
                'type': 'instance-marks',
              }),
            ]),
            'meta': dict({
              'count': 1,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '7101b858-5020-492b-9f4e-84e8083e252c',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Prof. Nils Kramer B.Sc.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '7101b858-5020-492b-9f4e-84e8083e252c',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Neues EFH',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '5f61ed6d-b041-451c-9b00-9fea6014c59f',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2026-99',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': '5f61ed6d-b041-451c-9b00-9fea6014c59f',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
              dict({
                'id': '<INSTANCE_MARK_ID>',
                'type': 'instance-marks',
              }),
            ]),
            'meta': dict({
              'count': 1,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[so]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '0747dd9b-7e54-4176-91a8-43ce7e19a708',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': None,
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '0747dd9b-7e54-4176-91a8-43ce7e19a708',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'film-foot-sea-in-ok',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '5fb9447f-5011-481e-a4db-833fde884254',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': None,
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '5fb9447f-5011-481e-a4db-833fde884254',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f1286bb7-b61a-4a61-ab17-8ef53c05d8d6',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': None,
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'f1286bb7-b61a-4a61-ab17-8ef53c05d8d6',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f3965190-cae7-49dd-a5ff-aad827920ebb',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Anneke Stroh MBA.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'f3965190-cae7-49dd-a5ff-aad827920ebb',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'a7f6b785-e2d2-4abd-bd61-856b4fdc9205',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': None,
          'special-id': '2601-2024-1',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'a7f6b785-e2d2-4abd-bd61-856b4fdc9205',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[sz]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/1134e1b7-1eb9-4c61-844e-9a372d94446a',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Peter Alvarez',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '1134e1b7-1eb9-4c61-844e-9a372d94446a',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/fight-around',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/5f09ecd4-a91b-434c-bbc9-6d9b97155e5b',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Peter Alvarez',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '5f09ecd4-a91b-434c-bbc9-6d9b97155e5b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/b4f7ab09-3ac3-47de-801e-f6d1090527b3',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Peter Alvarez',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'b4f7ab09-3ac3-47de-801e-f6d1090527b3',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/81443b81-3227-4c12-95c1-9eabb5ea4908',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Jane Yu',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '81443b81-3227-4c12-95c1-9eabb5ea4908',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/add8d762-57eb-4788-863d-9104ae1d97df',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Peter Alvarez',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'add8d762-57eb-4788-863d-9104ae1d97df',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[ur]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/479554b3-2284-4d13-951a-d4f7459e0eab',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '479554b3-2284-4d13-951a-d4f7459e0eab',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/exactly-close',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/6f21a59f-a7d2-4106-96f0-621e4b24c339',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '6f21a59f-a7d2-4106-96f0-621e4b24c339',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/137fcc46-4ad7-462a-aadf-3d45dc89641b',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': '137fcc46-4ad7-462a-aadf-3d45dc89641b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/e30a5d1a-75a8-4612-a93d-06052a68d8e0',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Univ.Prof. Halina Bachmann',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'e30a5d1a-75a8-4612-a93d-06052a68d8e0',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/579a10d4-4be8-42e6-8811-3b7f370888b3',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': '579a10d4-4be8-42e6-8811-3b7f370888b3',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2026-01-07T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/af5aebfe-7b07-4849-ad55-cf1ed72e063d',
          'has-additional-demand': True,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Ing. Giovanna Stoll B.Sc.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'additional-demand',
          'unread': True,
        }),
        'id': 'af5aebfe-7b07-4849-ad55-cf1ed72e063d',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
          'instance-marks': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 6,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
